k8s/worker-deployment.yml
# depending on the api version, are the kind of elements we have
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    # tells kubernetes which elements are handled by this deployment (the ones that have the "worker" label)
    matchLabels:
      component: worker
  template:
    # tells kubernetes to set the "worker" label in each element created by this deployment, to find them later using the "selector"
    metadata:
      labels:
        component: worker
    spec:
      containers:
        # the containers that will run in this pod (a pod runs one or more closely related containers)
        - name: worker
          image: nicolaslazzos/multiple-docker-worker
