k8s/postgres-cluster-ip-service.yml
# exposes a set of pods to other objects in the cluster (does not expose them to the outside world)
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    # we want the cluster ip to apply to all the "postgres" components
    component: postgres
  ports:
      # port to expose in this service
    - port: 5432
      # port in the container to map
      targetPort: 5432
