k8s/redis-cluster-ip-service.yml
# exposes a set of pods to other objects in the cluster (does not expose them to the outside world)
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    # we want the cluster ip to apply to all the "redis" components
    component: redis
  ports:
      # port to expose in this service
    - port: 6379
      # port in the container to map
      targetPort: 6379
