k8s/server-cluster-ip-service.yml
# exposes a set of pods to other objects in the cluster (does not expose them to the outside world)
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    # we want the cluster ip to apply to all the "api" components
    component: api
  ports:
      # port to expose in this service
    - port: 5000
      # port in the container to map
      targetPort: 5000
